<resources>
    <string name="app_name">Blue Pail</string>
    <string name="plant_db_table">plant_table</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item_filter">filter</string>
    <string name="menu_item_settings">appSettings</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_cancel">Cancel</string>
    <string name="text_view_plant_title_header">Title</string>
    <string name="text_view_plant_color_header">Color Group</string>
    <string name="text_view_plant_reminder_header">Reminders</string>
    <string name="text_view_plant_photo_header">Photo</string>
    <string name="edit_text_plant_title_hint">Enter a plant name</string>
    <string name="image_button_watering_setup">Setup your plants watering schedule</string>
    <string name="image_button_fertilizing_setup">Setup you plants fertilizing schedule</string>
    <string name="text_view_plant_watering_reminder_header">Watering Reminder</string>
    <string name="text_view_plant_fertilizing_reminder_header">Fertilizer Reminder (optional)</string>
    <string name="text_view_next_reminder_date_header">Next:</string>
    <string name="text_view_reminder_interval_header">Interval:</string>
    <string name="text_view_reminder_placeholder">Select the calendar icon</string>
    <string name="text_view_watering_date_header">Next Watering Date:</string>
    <string name="text_view_watering_interval_header">Watering Interval:</string>
    <string name="text_view_fertilizer_date_header">Next Fertilizing Date:</string>
    <string name="text_view_fertilizer_interval_header">Fertilizing Interval:</string>
    <string name="text_view_reminder_next_reminder_placeholder">Select a first date</string>
    <string name="text_view_reminder_interval_placeholder">Select a second date</string>
    <string name="text_view_reminder_setup_step_1">1. Select the day you want to be reminded first.</string>
    <string name="text_view_reminder_setup_step_2">2. Select the second day you want to be reminded.</string>
    <string name="text_view_reminder_setup_step_3">3. Select the Done button or select another date range.</string>
    <string name="text_view_onboarding_welcome">Welcome to </string>
    <string name="text_view_onboarding_plant_tracking_header">Plant Tracking</string>
    <string name="text_view_onboarding_plant_tracking_description">Add all of the plants you want to track, group them, and filter them with ease.</string>
    <string name="text_view_onboarding_custom_reminders_header">Custom Reminders</string>
    <string name="text_view_onboarding_custom_reminders_description">Setup watering and fertilizing reminders at any interval you would like.</string>
    <string name="text_view_onboarding_dynamic_notifications_header">Dynamic Notifications</string>
    <string name="text_view_onboarding_dynamic_notifications_description">Notifications get rescheduled based on when you water - so be sure to mark your actions in app.</string>
    <string name="button_done_label">Done</string>
    <string name="image_button_plant_photo">Add a photo of your plant</string>
    <string name="button_plant_edit">Edit</string>
    <string name="button_plant_water">Water</string>
    <string name="button_plant_fertilize">Fertilize</string>
    <string name="button_plant_delete">Delete</string>
    <string name="button_get_started">Get Started</string>
    <string name="notification_channel_name">notifyBluePail</string>
    <string name="notification_channel_description">Notifies the user when it is time to water or fertilize their plants</string>
    <string name="notification_action_plant_reminder">com.davidsadler.bluepail.action.PLANT_REMINDER</string>
    <string name="toast_reminder_setup_select_future_date">Please select a date later than the first</string>
    <string name="toast_reminder_setup_select_today">Please select a date starting with today</string>
    <string name="snack_bar_watering_confirmation">Plant watering reminder rescheduled</string>
    <string name="snack_bar_fertilizing_confirmation">Plant fertilizing reminder rescheduled</string>
    <string name="snack_bar_deletion_confirmation">Plant deleted</string>
    <string name="snack_bar_undo_action">UNDO</string>
    <string name="toolbar_title_edit_your_plant">Edit Your Plant</string>
    <string name="nav_graph_title_plant_list">My Plants</string>
    <string name="nav_graph_title_plant_detail">Create a Plant</string>
    <string name="nav_graph_title_app_settings">Settings</string>
</resources>
