<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PlantDetail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_cancel_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/toolbar_cancel_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_plant_title_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/editText_plant_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/edit_text_plant_title_hint"
                    android:inputType="textEmailAddress"
                    android:autofillHints="@string/edit_text_plant_title_hint"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_plant_color_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_plant_colors"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layoutDirection="inherit">

                </androidx.recyclerview.widget.RecyclerView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_plant_reminder_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="155dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_view_plant_watering_reminder_header"
                            android:textColor="@color/colorPrimary" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_view_next_reminder_date_header" />

                            <Space
                                android:layout_width="10dp"
                                android:layout_height="match_parent" />

                            <TextView
                                android:id="@+id/textView_next_watering_reminder"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Tomorrow at (12:00 AM)" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_view_reminder_interval_header" />

                            <Space
                                android:layout_width="10dp"
                                android:layout_height="match_parent" />

                            <TextView
                                android:id="@+id/textView_watering_interval"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="1 day" />
                        </LinearLayout>

                        <TimePicker
                            android:id="@+id/timePicker_watering_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:timePickerMode="spinner"
                            tools:targetApi="LOLLIPOP" />

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/imageButton_setup_watering"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="#F9F9F9"
                        android:contentDescription="@string/image_button_watering_setup"
                        android:scaleType="fitCenter"
                        android:src="@drawable/button_calendar_setup" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <View
                    android:layout_width="@android:dimen/thumbnail_width"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="155dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_view_plant_fertilizing_reminder_header"
                            android:textColor="@color/fertilizerGreen" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_view_next_reminder_date_header" />

                            <Space
                                android:layout_width="10dp"
                                android:layout_height="match_parent" />

                            <TextView
                                android:id="@+id/textView_next_fertilizing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Select the calendar icon" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView11"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_view_reminder_interval_header" />

                            <Space
                                android:layout_width="10dp"
                                android:layout_height="match_parent" />

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="X days" />
                        </LinearLayout>

                        <TimePicker
                            android:id="@+id/timePicker_setup_fertilizing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:timePickerMode="spinner"
                            tools:targetApi="LOLLIPOP" />

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/imageButton_setup_fertilizing"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_weight="0"
                        android:background="#F9F9F9"
                        android:contentDescription="@string/image_button_fertilizing_setup"
                        android:scaleType="fitCenter"
                        android:src="@drawable/button_calendar_setup" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_plant_photo_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <ImageButton
                    android:id="@+id/imageButton_plant_photo"
                    android:layout_width="match_parent"
                    android:layout_height="185dp"
                    android:contentDescription="@string/image_button_plant_photo" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>